continued work on reviews, tweaked colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<!-- The Color Palette, using orange, green, black, purple - Called Basic Halloween -->
+<!-- http://www.colourlovers.com/palette/136637/Basic_Halloween -->
+<!-- I added ::selection to change the text selection color, it shows up as an error so I will comment it out -->
 <head>
 	<title>Final Fantasy: A History</title>
 	<meta charset="utf-8">
@@ -159,16 +162,24 @@
 			<br>
 			<strong>9.5</strong>
 			<h4>Presentation</h4>
-			<p>Amazing cutscenes, polished interfaces and a great story.</p>
+			<p>
+				Amazing cutscenes, polished interfaces and a great story.
+			</p>
 			<strong>9</strong>
 			<h4>Graphics</h4>
-			<p>Character are excellent and in-game environments are breathtaking. Some lag but isn't enough to hurt the visuals overall.</p>
+			<p>
+				Character are excellent and in-game environments are breathtaking. Some lag but isn't enough to hurt the visuals overall.
+			</p>
 			<strong>9</strong>
 			<h4>Sound</h4>
-			<p>Great voice acting. Music is not as memorable as past Final Fantasies, but it's good.</p>
+			<p>
+				Great voice acting. Music is not as memorable as past Final Fantasies, but it's good.
+			</p>
 			<strong>8.5</strong>
 			<h4>Gameplay</h4>
-			<p>Fantastic battle system with both high speeds and lots of rewards. Lack of side quests and content is somewhat disappointing.</p>
+			<p>
+				Fantastic battle system with both high speeds and lots of rewards. Lack of side quests and content is somewhat disappointing.
+			</p>
 			<h3>8.9 Overall</h3>
 		</div>
 		<div>
@@ -193,16 +204,24 @@
 			<br>
 			<strong>10</strong>
 			<h4>Presentation</h4>
-			<p>Very fast load times, one of the best storylines ever, and a gigantic world.</p>
+			<p>
+				Very fast load times, one of the best storylines ever, and a gigantic world.
+			</p>
 			<strong>10</strong>
 			<h4>Graphics</h4>
-			<p>A PS2 technical accomplishment in every sense. Almost no slow-down, detail is incredible, animations are great, and the artistic design is awesome.</p>
+			<p>
+				A PS2 technical accomplishment in every sense. Almost no slow-down, detail is incredible, animations are great, and the artistic design is awesome.
+			</p>
 			<strong>9</strong>
 			<h4>Sound</h4>
-			<p>Voice actors play out the storyline perfectly and the sound effects are varied and first-rate. Musically, it isn't the best, but is still very gppd.</p>
+			<p>
+				Voice actors play out the storyline perfectly and the sound effects are varied and first-rate. Musically, it isn't the best, but is still very good.
+			</p>
 			<strong>9</strong>
 			<h4>Gameplay</h4>
-			<p>Full-camera control and new enemy AI make for a Final Fantasy like no other. Best of all, it's fun AND challenging.</p>
+			<p>
+				Full-camera control and new enemy AI make for a Final Fantasy like no other. Best of all, it's fun AND challenging.
+			</p>
 			<h3>9.5 Overall</h3>
 		</div>
 	</section>
@@ -214,25 +233,34 @@
 		<p>
 			Final Fantasy XI is set in the Age of Adventurers. It is the 884th year of the Crystal Era, twenty years after the end of the Crystal War that ravaged Vana'diel. The three main nations of Vana'diel, San d'Oria, Bastok and Windurst continue their struggle against the Beastmen who, although less organized, have regrouped and still terrorize the land. Rather than dispatching their own forces to deal with this threat, the nations of Vana'diel begin to employ adventurers to handle them as well as other minor tasks. The player is one such adventurer.
 		</p>
-		<div>
-			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
-			<figure onclick="return enlarge(this)" class="image imgright"></figure>
-		</div>
 		<div class="review">
 			Review:
 			<br>
-			<strong>8</strong>
+			<strong>7</strong>
 			<h4>Presentation</h4>
-			<p>As Final Fantasy is a online MMORPG, the world is large, although load times can be slower.</p>
+			<p>
+				As Final Fantasy is a online MMORPG, the world is large, although load times can be slower.
+			</p>
 			<strong>6</strong>
 			<h4>Graphics</h4>
-			<p>The graphics were somewhat sacrificed in XI due to the multiplayer aspect. Even with the reduced graphics, the cutscenes and unique characters make the game colorful and </p>
+			<p>
+				The graphics were somewhat sacrificed in XI due to the multiplayer aspect. Even with the reduced graphics, the cutscenes and unique characters make the game colorful.
+			</p>
 			<strong>9</strong>
 			<h4>Sound</h4>
-			<p>The music is nothing memorable however it follows the standard set by previous Final Fantasies in that it is still great.</p>
+			<p>
+				The music is nothing memorable however it follows the standard set by previous Final Fantasies in that it is still great.
+			</p>
 			<strong>8</strong>
 			<h4>Gameplay</h4>
-			<p></p>
+			<p>
+				The gameplay of Final Fantasy XI is incredible, however it is not known for being innovative in any way. The game includes many quests, side quests, and impressive boss battles.
+			</p>
+			<h3>7.5 Overall</h3>
+		</div>
+		<div>
+			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
+			<figure onclick="return enlarge(this)" class="image imgright"></figure>
 		</div>
 	</section>
 
@@ -247,6 +275,31 @@
 			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
 			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
+		<div class="review">
+			Review:
+			<br>
+			<strong>9</strong>
+			<h4>Presentation</h4>
+			<p>
+				Perfect text localization and a strong English dub, plus the normal top-class Final Fantasy technical awesomeness..
+			</p>
+			<strong>9.5</strong>
+			<h4>Graphics</h4>
+			<p>
+				Extremely beautiful graphics, with amazing cutscenes. Hardly and slow-down, with only bits of the body language that can't quite keep up, and that's almost lost amid the rest of the spectacle.
+			</p>
+			<strong>9.4</strong>
+			<h4>Sound</h4>
+			<p>
+				The new-school soundtrack is going to ruffle some feathers, but it works with the rest of the package, and the voices are pretty good too.
+			</p>
+			<strong>9.6</strong>
+			<h4>Gameplay</h4>
+			<p>
+				A leap ahead of any recent FF in gameplay terms. The combat system is now blazing fast and far more versatile. The Sphere Grid is a major break with the past, but one that does work well.
+			</p>
+			<h3>9.5 Overall</h3>
+		</div>
 	</section>
 
 	<hr>
@@ -256,6 +309,31 @@
 		<p>
 			The ninth installment in the long-running RPG series and the final for the original PlayStation, Final Fantasy IX gives fans of the franchise the nostalgic thrill of re-experiencing the visual style, gameplay elements and overall spirit of the 16-bit Final Fantasy games of the 8/16 bit eras. The main story centers on Zidane Tribal, a young thief who quickly becomes engaged in a quest to save the world, along with Vivi Ornitier, a young black mage, and Princess Garnet, heir to the throne of Alexandria. The game features detailed polygonal character models and lush pre-rendered backgrounds. They all combine for an unforgettable adventure!
 		</p>
+		<div class="review">
+			Review:
+			<br>
+			<strong>9</strong>
+			<h4>Presentation</h4>
+			<p>
+				The big-budget summer blockbuster of videogames. Untouchable CG and a first-rate translation, although the story and structure are a tad formula.
+			</p>
+			<strong>9.9</strong>
+			<h4>Graphics</h4>
+			<p>
+				Too beautiful for words. Every aspect of this game drips with detail - goodness knows how many artists it took to create something like this.
+			</p>
+			<strong>7.5</strong>
+			<h4>Sound</h4>
+			<p>
+				The music, unfortunately, is a bit of a disappointment, if only because Nobuo Uematsu has set such high standards for the series.
+			</p>
+			<strong>8.5</strong>
+			<h4>Gameplay</h4>
+			<p>
+				This is Final Fantasy - it plays like Final Fantasy. A well-executed revolution would be more than welcome, although viewed within a vacuum it works quite well.
+			</p>
+			<h3>9.2 Overall</h3>
+		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
 			<figure onclick="return enlarge(this)" class="image imgright"></figure>
@@ -275,6 +353,10 @@
 			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
 			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 	</section>
 
 	<hr>
@@ -289,6 +371,10 @@
 			Now a small rebel group emanating from the slums must quell the various dangers toward the innocent, and one mercenary for hire must look amidst the lies and deception and find the man he is within.”
 			<br><br>—Official Introduction
 		</p>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
 			<figure onclick="return enlarge(this)" class="image imgright"></figure>
@@ -306,6 +392,10 @@
 			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
 			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 	</section>
 
 	<hr>
@@ -315,6 +405,10 @@
 		<p>
 			The game centers around a group of four strangers brought together by circumstance to save the Crystals that have mysteriously begun shattering one by one. The one behind the phenomenon is the villain Exdeath, as part of a plan to release himself from imprisonment and to gain the power of the Void, a realm of nothingness, which could bestow absolute power on one able to resist being absorbed by it. The four Warriors of Light turn their attentions to defeating Exdeath and stopping the Void's energies from consuming their world.
 		</p>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
 			<figure onclick="return enlarge(this)" class="image imgright"></figure>
@@ -332,6 +426,10 @@
 			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
 			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 	</section>
 
 	<hr>
@@ -341,6 +439,10 @@
 		<p>
 			An earthquake opens up a previously hidden cavern in Altar Cave near the village of Ur on the floating continent. Four young orphans under the care of Topapa, the village elder, explore the earthquake's impact and come across a crystal of light. The crystal grants them a portion of its power, and instructs them to go forth and restore balance to the world. Not knowing what to make of the crystal's pronouncements, but nonetheless recognizing the importance of its words, the four inform their adoptive family of their mission and set out to explore an overworld outside the area in which they were brought up, in order to bring balance back to the world.
 		</p>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
 			<figure onclick="return enlarge(this)" class="image imgright"></figure>
@@ -358,6 +460,10 @@
 			<figure onclick="return enlarge(this)" class="image imgtop"></figure><br>
 			<figure onclick="return enlarge(this)" class="image imgbottom"></figure>
 		</div>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 	</section>
 
 	<hr>
@@ -367,6 +473,10 @@
 		<p>
 			Players guide the Warriors of Light as they set out on a quest to restore the crystals to their former luster. Its side view battles, choice and promotion of character classes, and sprawling world explored with fantastic vehicles quickly became standards of the series. This game set the stage for all FINAL FANTASY games to come.
 		</p>
+		<div class="review">
+			Review:
+			<br>
+		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
 			<figure onclick="return enlarge(this)" class="image imgright"></figure>
