nearly completed all reviews

--- a/index.html
+++ b/index.html
@@ -356,6 +356,28 @@
 		<div class="review">
 			Review:
 			<br>
+			<strong>9</strong>
+			<h4>Presentation</h4>
+			<p>
+				Production values don't get any higher, but the story could use some work.
+			</p>
+			<strong>10</strong>
+			<h4>Graphics</h4>
+			<p>
+				This is as good as it gets.
+			</p>
+			<strong>9.5</strong>
+			<h4>Sound</h4>
+			<p>
+				Only the overused -- and getting old -- Final Fantasy battle theme mars a near-perfect soundtrack.
+			</p>
+			<strong>7</strong>
+			<h4>Gameplay</h4>
+			<p>
+				A lot of solid new ideas, but the constant, repetitive, time consuming battles are too much same-old same-old.
+			</p>
+			<strong>8.9</strong>
+			<h3>9 Overall</h3>
 		</div>
 	</section>
 
@@ -374,6 +396,17 @@
 		<div class="review">
 			Review:
 			<br>
+			I have not played this Final Fantasy, so I am basing this off purely other sources.
+			<br>
+			<strong>9</strong>
+			<h4>Presentation</h4>
+			<strong>8.5</strong>
+			<h4>Graphics</h4>
+			<strong>9.7</strong>
+			<h4>Sound</h4>
+			<strong>9.5</strong>
+			<h4>Gameplay</h4>
+			<h3>9.5 Overall</h3>
 		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
@@ -395,6 +428,27 @@
 		<div class="review">
 			Review:
 			<br>
+			<strong>9</strong>
+			<h4>Presentation</h4>
+			<p>
+				A reworked translation and plenty of new bells and whistles enhance an experience that already had a great story and fantastic characters.
+			</p>
+			<strong>7</strong>
+			<h4>Graphics</h4>
+			<p>
+				There is intermittent slowdown and the sprites were drawn before most of the world's sixth graders were born, but the art style is superb and the visuals are incredibly varied.
+			</p>
+			<strong>8.5</strong>
+			<h4>Sound</h4>
+			<p>
+				Uematsu created one of the greatest soundtracks ever heard in Final Fantasy VI, and it's still that good more than a decade later. It's only downfall is the forced downgrade of its technical quality.
+			</p>
+			<strong>9</strong>
+			<h4>Gameplay</h4>
+			<p>
+				Character customization and battle options from the heavens that still competes with anything on the market today. Every character is completely unique in how they play.
+			</p>
+			<h3>9 Overall</h3>
 		</div>
 	</section>
 
@@ -408,6 +462,27 @@
 		<div class="review">
 			Review:
 			<br>
+			<strong>8.5</strong>
+			<h4>Presentation</h4>
+			<p>
+				While it doesn't have the best plot in the series, its characters are interesting and the ride is familiar yet fun. The bestiary, music player, and better translation are appreciated too.
+			</p>
+			<strong>7</strong>
+			<h4>Graphics</h4>
+			<p>
+				Thanks to a new coat of paint, this 14 year-old holds up well. The colorful and diverse environments do their job and the attention to detail is solid. Expect occasional slowdown, however.
+			</p>
+			<strong>8</strong>
+			<h4>Sound</h4>
+			<p>
+				America gets a second chance to hear Nobuo Uematsu's overlooked but impressive soundtrack. Audio effects are your typical FF 16-bit fare.
+			</p>
+			<strong>9</strong>
+			<h4>Gameplay</h4>
+			<p>
+				The job-changing system is terrific. More than 25 different classes to choose from, a ton of combinations, cool boss fights, and plenty of battlefields make this one fun.
+			</p>
+			<h3>8.5 Overall</h3>
 		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
@@ -429,6 +504,26 @@
 		<div class="review">
 			Review:
 			<br>
+			<strong>8</strong>
+			<h4>Presentation</h4>
+			<p>
+				The dual screen presentation is stronger this time around, complete with amazing CG, more attention to keeping both screens active, and better 2D/3D styles overall.
+			</p>
+			<strong>9.5</strong>
+			<h4>Graphics</h4>
+			<p>
+				It was amazing in FF3, and it’s still amazing now. Hands-down some of the best 3D on DS, and easily some of the strongest art, character, and world designs.
+			</p>
+			<strong>9</strong>
+			<h4>Sound</h4>
+			<p>
+				Right on par with the last DS remake, this time throwing in more voiceover work. The music from IV isn’t quite as memorable as other Final Fantasy games, but it’s still inspired.
+			</p>
+			<strong>8.5</strong>
+			<h4>Gameplay</h4>
+			<p>
+				The auto-battle system, added Whyt summon, augment system, and mini-map rewards make this a stronger experience overall. Active battles can be tough, but that’s what it’s all about.
+			</p>
 		</div>
 	</section>
 
