completed all of the reviews, finished all content

--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
 			<p>
 				The auto-battle system, added Whyt summon, augment system, and mini-map rewards make this a stronger experience overall. Active battles can be tough, but that’s what it’s all about.
 			</p>
+			<h3>8.7 Overall</h3>
 		</div>
 	</section>
 
@@ -537,6 +538,17 @@
 		<div class="review">
 			Review:
 			<br>
+			I have not played this Final Fantasy, so I am basing this off purely other sources.
+			<br>
+			<strong>9.7</strong>
+			<h4>Presentation</h4>
+			<strong>9.5</strong>
+			<h4>Graphics</h4>
+			<strong>9</strong>
+			<h4>Sound</h4>
+			<strong>9.4</strong>
+			<h4>Gameplay</h4>
+			<h3>9.5 Overall</h3>
 		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
@@ -558,6 +570,9 @@
 		<div class="review">
 			Review:
 			<br>
+			I have not played this Final Fantasy, so I am basing this off purely other sources.
+			<br>
+			<h3>6.8 Overall</h3>
 		</div>
 	</section>
 
@@ -571,6 +586,9 @@
 		<div class="review">
 			Review:
 			<br>
+			I have not played this Final Fantasy, so I am basing this off purely other sources.
+			<br>
+			<h3>7 Overall</h3>
 		</div>
 		<div>
 			<figure onclick="return enlarge(this)" class="image imgleft"></figure>
