--- a/index.html
+++ b/index.html
@@ -598,47 +598,39 @@
 
 	<hr>
 	<div class="infiniteCarousel">
-      <div class="wrapper" style="overflow: hidden;">
+      <div class="wrapper">
         <ul>
         	<li class="cloned">
-        		<img src="img/carousel/gameplay1.jpg" height="125" width="250" alt="Wonky Buildings">
+        		<img src="img/carousel/gameplay1.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
         	<li class="empty cloned"></li>
         	<li>
-        		<img src="img/carousel/gameplay2.jpg" height="125" width="250" alt="Tall Glow">
+        		<img src="img/carousel/gameplay2.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
         	<li class="empty cloned"></li>
         	<li>
-        		<img src="img/carousel/gameplay3.jpg" height="125" width="250" alt="Rockefella">
+        		<img src="img/carousel/gameplay3.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="img/carousel/gameplay4.jpg" height="125" width="250" alt="Chrysler Reflect">
+        		<img src="img/carousel/gameplay4.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="img/carousel/gameplay5.jpg" height="125" width="250" alt="Chrysler Up">
+        		<img src="img/carousel/gameplay5.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
            	<li class="empty cloned"></li>
         	<li>
-        		<img src="img/carousel/gameplay6.jpg" height="125" width="250" alt="Wonky Buildings">
+        		<img src="img/carousel/gameplay6.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
         	<li class="empty cloned"></li>
          	<li>
-         		<img src="img/carousel/gameplay7.jpg" height="125" width="250" alt="Leaves of Fall">
+         		<img src="img/carousel/gameplay7.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
          	</li>
         	<li class="empty"></li>
         	<li class="cloned">
-        		<img src="img/carousel/gameplay8.jpg" height="125" width="250" alt="Tall Glow">
+        		<img src="img/carousel/gameplay8.jpg" height="125" width="250" alt="Final Fantasy Gameplay">
         	</li>
-        	<!-- <li class="empty cloned"></li>
-        	<li class="cloned">
-        		<img src="http://farm4.static.flickr.com/3184/3047872076_61a511a04b_s.jpg" height="125" width="250" alt="Wet Cab">
-        	</li>
-        	<li class="empty cloned"></li>
-        	<li class="cloned">
-        		<img src="http://farm4.static.flickr.com/3048/3047871878_84bfacbd35_s.jpg" height="125" width="250" alt="Rockefella">
-        	</li> -->
         </ul>        
       </div>
       <a class="arrow back">&lt;</a>
